# raspi-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SBOM.json  SBOM.md  TODO.md  TODO_public_repo.md  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  update-lockfiles.yml
hardware/: leds.py  temperature.py
pi1_bak/: publish_ds18b20.ini  publish_ds18b20.py
scripts/: generate_sbom.py
systemd/: raspi-mcp.service
tests/: test_leds.py  test_server.py  test_temperature.py
