[project]
name = "raspi-mcp"
version = "0.1.0"
description = "MCP server for Raspberry Pi GPIO/LED control and DS18B20 temperature sensors"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
    "pip-tools>=7.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["pi1_bak"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
