[project]
name = "raspi-mcp"
version = "0.1.0"
description = "MCP server for Raspberry Pi GPIO/LED control and DS18B20 temperature sensors"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rolf Masfelder" }]
keywords = ["raspberry-pi", "mcp", "gpio", "ds18b20", "iot"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "mcp>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
    "pip-tools>=7.0",
    "pre-commit>=4.6",
]

[project.urls]
Homepage = "https://github.com/RolfMasfelder/raspi-mcp"

[tool.setuptools.packages.find]
include = ["hardware*"]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["pi1_bak"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
